---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: ?
  Minor Features:
    - [Add topic] and [Edit topic] buttons now have a hover state
    - Multi-line text support
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 23. 04. 2023
  Bugfixes:
    - Fix 0.1.1 data migration for multiplayer
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 23. 04. 2023
  Major Features:
    - Rewritten GUI code to properly support multiplayer
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 22. 04. 2023
  Major Features:
    - Initial release