@@ -4,6 +4,7 @@ Date: ?
   Minor Features:
     - [Add topic] and [Edit topic] buttons now have a hover state
     - Multi-line text support
+    - Always show topic content area, even if no topic is selected
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 23. 04. 2023
